fix overflow and validate button margin

--- a/apps/src/codebridge/InfoPanel/styles/validation-results.module.scss
+++ b/apps/src/codebridge/InfoPanel/styles/validation-results.module.scss
@@ -5,7 +5,6 @@
 }
 
 .validationResultsTable {
-  table-layout: fixed;
   width: 100%;
   border-collapse: collapse;
   border: 1px solid $light_white;
@@ -17,7 +16,7 @@
 
   td {
     border: 1px solid $light_white;
-    padding: 4px;
+    padding: 4px 6px;
   }
 }
 
